:lock: Updated all links to HTTPS

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <meta name="keywords" content="simple,powerful,blog,publishing,platform,laravel,canvas,markdown,material,design,developers">
     <meta name="author" content="Todd Austin">
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="http://canvas.toddaustin.io" />
+    <meta name="twitter:site" content="https://canvas.toddaustin.io" />
     <meta name="twitter:title" content="Canvas" />
     <meta name="twitter:description" content="Simple, Powerful Blog Publishing Platform" />
-    <meta name="twitter:image" content="http://canvas.toddaustin.io/img/twitter-card.png" />
+    <meta name="twitter:image" content="https://canvas.toddaustin.io/img/twitter-card.png" />
     <meta property="og:title" content="Canvas" />
     <meta property="og:description" content="Simple, Powerful Blog Publishing Platform" />
-    <meta property="og:url" content="http://canvas.toddaustin.io" />
-    <meta property="og:image" content="http://canvas.toddaustin.io/img/twitter-card.png" />
+    <meta property="og:url" content="https://canvas.toddaustin.io" />
+    <meta property="og:image" content="https://canvas.toddaustin.io/img/twitter-card.png" />
 
     <title>Canvas - Simple, Powerful Blog Publishing Platform</title>
 
-    <link href="http://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="css/toolkit-minimal.css" rel="stylesheet">
     <link href="css/application-minimal.css" rel="stylesheet">
@@ -35,7 +35,7 @@
                 <span class="qa"></span>
                 <span class="qa"></span>
             </button>
-            <a class="l" href="http://canvas.toddaustin.io">
+            <a class="l" href="https://canvas.toddaustin.io">
                 <img src="img/logo.gif" style="width: 100px">
             </a>
         </div>
@@ -48,10 +48,10 @@
                     <a href="https://cnvs.readme.io/blog" target="_blank">Blog</a>
                 </li>
                 <li>
-                    <a href="http://github.com/cnvs/canvas" target="_blank">GitHub</a>
+                    <a href="https://github.com/cnvs/canvas" target="_blank">GitHub</a>
                 </li>
                 <li>
-                    <a href="http://cnvs.hipchat.com" target="_blank">HipChat</a>
+                    <a href="https://cnvs.hipchat.com" target="_blank">HipChat</a>
                 </li>
             </ul>
         </div>
@@ -398,10 +398,10 @@
                 <a href="https://www.hipchat.com" target="_blank"><img src="img/sponsors/hipChat.png"></a>
                 <a href="https://www.araxis.com" target="_blank"><img src="img/sponsors/araxis-professional.png" style="max-height:16px;"></a>
                 <a href="https://www.navicat.com" target="_blank"><img src="img/sponsors/navicat-premium.png"></a>
-                <a href="http://readme.io" target="_blank"><img src="img/sponsors/readme.png"></a>
-                <a href="http://versioneye.com" target="_blank"><img src="img/sponsors/versioneye.png" style="max-height:18px;"></a>
+                <a href="https://readme.io" target="_blank"><img src="img/sponsors/readme.png"></a>
+                <a href="https://versioneye.com" target="_blank"><img src="img/sponsors/versioneye.png" style="max-height:18px;"></a>
                 <a href="https://www.jetbrains.com" target="_blank"><img src="img/sponsors/jetBrains.png"></a>
-                <a href="http://saucelabs.com" target="_blank"><img src="img/sponsors/sauce-labs.png" style="max-height:14px;"></a>
+                <a href="https://saucelabs.com" target="_blank"><img src="img/sponsors/sauce-labs.png" style="max-height:14px;"></a>
                 <a href="https://status.io" target="_blank"><img src="img/sponsors/status.png" style="max-height:15px;"></a>
                 <a href="https://www.keycdn.com" target="_blank"><img src="img/sponsors/keyCDN.png"></a>
             </p>
